# uv-docker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.3_12  Dockerfile.3_13  Dockerfile.3_14  Makefile  README.md  pyproject.toml
.github/workflows/: bump-version.yml  docker-hub-image.yml  docker-image.yml
